# bevy-demo

./: Cargo.toml  Readme.md
.cargo/: config.toml
assets/shader/: games202.wgsl  obj_custom.wgsl
example/: games202_idea.rs  gltf_load.rs  obj_custom.rs  obj_standard.rs  test.rs
src/: main.rs
