[package]
name = "bevy-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7.0", features = ["dynamic"] }
bevy_obj = "0.7.0"
bevy_egui = "0.14"

[workspace]
resolver = "2"

[[example]]
name = "test"
path = "example/test.rs"

[[example]]
name = "obj_standard"
path = "example/obj_standard.rs"

[[example]]
name = "obj_custom"
path = "example/obj_custom.rs"
